<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.login_module.ForgotPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp">

        <RelativeLayout
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/back_arrow"
                android:scaleType="fitXY"/>

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/forgot_password_img"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/Forgot_password"
            android:textColor="@color/blackish"
            android:textSize="@dimen/_14sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/enter_email_forgot"
            android:textColor="@color/blackish"
            android:textSize="@dimen/_12sdp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/popup_relative">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/transparent"
                android:fontFamily="@font/muli_bold"
                android:gravity="center|start"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_registerd_email"
                android:textColor="@color/themecolor"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>


        <TextView
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/orange_round_bg"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />



    </LinearLayout>

</RelativeLayout>