<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/popup_relative">

        <RelativeLayout
            android:id="@+id/close_popup"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/close"
                android:tint="@color/black" />
        </RelativeLayout>

        <TextView
            android:id="@+id/facebook_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#212121"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/allow_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebook_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="05dp"
            android:gravity="center"
            android:text="@string/Camera_permission_txt"
            android:textColor="#212121"
            android:textSize="@dimen/_10sdp"
            android:textStyle="normal" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/allow_txt"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#d3d3d3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btn_cancle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#d3d3d3" />

            <TextView
                android:id="@+id/btn_OK"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/OK"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>