<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/grey"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/select_members_to_call"
            android:textColor="@color/blackish"
            android:textSize="@dimen/_15ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="6sp"
            android:layout_marginRight="6sp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton_grey"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/startCallButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton_orange"
            android:gravity="center"
            android:text="@string/start_call"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</LinearLayout>