<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/popup_relative">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="Delete"
                android:textColor="@color/blackish"
                android:textSize="@dimen/_15ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>

            <TextView
                android:id="@+id/message_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/muli_semibold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/are_you_sure_you_want_to_delete_appointment"
                android:textColor="@color/blackish"
                android:textSize="@dimen/_15ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/no_text_popup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:background="@color/light_grey"
                    android:fontFamily="@font/muli_semibold"
                    android:gravity="center"
                    android:text="@string/cancel_text"
                    android:textColor="@color/blackish"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/yes_text_popup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/orange_color"
                    android:fontFamily="@font/muli_semibold"
                    android:gravity="center"
                   android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>